<resources>
    <string name="app_name">試すやつ</string>
    <string name="let_s_scan">Let\'s Scan</string>
    <string name="gs1code">GS1Code</string>
    <string name="metags1code">MetaGS1Code</string>
    <string name="format">Format</string>
    <string name="packageInsert">添付文書</string>
    <string name="downloadButtonWhite">downloadButtonWhite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="todo">TODO</string>
    <string name="todoto">TODO</string>
    <string name="bt_save">不具合情報を見る</string>
    <string-array name="lv_InformationList">
        <item>デルフュージョンシリンジポンプ35号</item>
        <item>デルフュージョンシリンジポンプ38号</item>
        <item>デルフュージョンシリンジポンプSS型</item>
        <item>自動視力計NV-350</item>
    </string-array>
    <string name ="tv_lb_name">名称</string>
    <string name="tv_name">未選択</string>
    <string name="tv_lb_note">不具合情報</string>
    <string name="btn_save">保存</string>
    <string name="tv_lb_number">ID</string>
    <string name="test_watch">ギャラリーを開く</string>
    <string name="information">機器の情報を入力してください</string>
    <string name="showtable">テーブルを閲覧</string>
    <string name="deletetable">テーブルを削除</string>
    <string name="ID">ID(GTIN14ケタ)</string>
    <string name="name">名称</string>
    <string name="careful">不具合情報</string>
    <string name="picture">ファイルパス</string>
</resources>