<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/lvInformation"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.6"
        android:entries="@array/lv_InformationList" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lb_name"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tvInformationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lb_number"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/tvIDNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_lb_note"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="top"
        android:inputType="textMultiLine"/>
    <Button
        android:id="@+id/btnPictureSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="getPicture"
        android:text="@string/test_watch"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onSaveButtonClick"
        android:text="@string/btn_save"/>

</LinearLayout>